--- a/deposits.html
+++ b/deposits.html
@@ -9,54 +9,168 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
-body{margin:0;font-family:system-ui;background:#020617;color:#e5e7eb;padding:16px;padding-bottom:32px}
-header{display:flex;justify-content:space-between;align-items:center;padding:14px 0;border-bottom:1px solid #1e293b;margin-bottom:14px}
-button{border:none;padding:10px 14px;border-radius:10px;font-weight:900;cursor:pointer;background:#38bdf8;color:#020617}
-.box{border:1px solid #1e293b;border-radius:12px;padding:14px;background:#020617;margin-bottom:16px}
-.card{border:1px solid #1e293b;border-radius:12px;padding:12px;background:#0b1224}
+/* GLOBAL */
+body{
+  margin:0;
+  font-family:system-ui;
+  background:#020617;
+  color:#e5e7eb;
+  padding:16px;
+  padding-bottom:32px;
+}
+header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:14px 0;
+  border-bottom:1px solid #1e293b;
+  margin-bottom:14px;
+}
+button{
+  border:none;
+  padding:10px 14px;
+  border-radius:10px;
+  font-weight:1000;
+  cursor:pointer;
+  background:#38bdf8;
+  color:#020617;
+}
+h2{margin:0;font-size:18px}
 .small{color:#94a3b8;font-size:12px;margin-top:6px}
 .ok{color:#22c55e}
 .err{color:#f87171}
 
-input,select{width:100%;padding:12px;margin:10px 0;border-radius:10px;border:1px solid #1e293b;background:#020617;color:#e5e7eb;box-sizing:border-box}
+/* BOX / CARD */
+.box{
+  border:1px solid #1e293b;
+  border-radius:12px;
+  padding:14px;
+  background:#020617;
+  margin-bottom:14px;
+}
+.card{
+  border:1px solid #1e293b;
+  border-radius:12px;
+  padding:12px;
+  background:#0b1224;
+}
 
-a{color:#38bdf8;font-weight:900;text-decoration:none}
+/* INPUTS */
+input,select{
+  width:100%;
+  padding:12px;
+  margin:10px 0;
+  border-radius:10px;
+  border:1px solid #1e293b;
+  background:#020617;
+  color:#e5e7eb;
+  box-sizing:border-box;
+}
+
+/* LINKS */
+a{color:#38bdf8;font-weight:1000;text-decoration:none}
 a:hover{text-decoration:underline}
 
-/* Tabs + Search */
-.tabs{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
-.tab{padding:7px 12px;border-radius:999px;background:rgba(255,255,255,.07);cursor:pointer;font-weight:1000;font-size:12px}
-.tab.active{background:rgba(56,189,248,.18);border:1px solid rgba(56,189,248,.45)}
-.searchBar{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-.searchBar input{flex:1;min-width:210px}
-.miniBtn{background:#0b1224;color:#e5e7eb;border:1px solid #1e293b}
+/* BUTTONS */
+.miniBtn{
+  background:#0b1224;
+  color:#e5e7eb;
+  border:1px solid #1e293b;
+}
+.greenBtn{ background:#22c55e; }
+.fullBtn{ width:100%; }
 
-/* Table */
+/* TABS */
+.tabs{
+  display:flex;
+  gap:8px;
+  flex-wrap:wrap;
+  margin-top:10px;
+}
+.tab{
+  padding:7px 12px;
+  border-radius:999px;
+  background:rgba(255,255,255,.07);
+  cursor:pointer;
+  font-weight:1000;
+  font-size:12px;
+  border:1px solid rgba(255,255,255,.06);
+}
+.tab.active{
+  background:rgba(56,189,248,.18);
+  border:1px solid rgba(56,189,248,.45);
+}
+
+/* SEARCH */
+.searchBar{
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+  margin-top:12px;
+}
+.searchBar input{
+  flex:1;
+  min-width:210px;
+}
+
+/* TABLE */
 table{width:100%;border-collapse:collapse;margin-top:12px}
-th,td{border-bottom:1px solid rgba(255,255,255,.12);padding:10px;font-size:13px;word-break:break-word;vertical-align:middle}
+th,td{
+  padding:10px;
+  border-bottom:1px solid rgba(255,255,255,.12);
+  font-size:13px;
+  word-break:break-word;
+  vertical-align:middle;
+}
 th{opacity:.85;text-align:left}
 
-.badge{padding:5px 10px;border-radius:999px;font-weight:1000;font-size:12px;display:inline-block}
+/* STATUS PILL */
+.badge{
+  padding:5px 10px;
+  border-radius:999px;
+  font-weight:1000;
+  font-size:12px;
+  display:inline-block;
+}
 .pending{background:#facc15;color:#020617}
 .approved{background:#22c55e;color:#020617}
 .rejected{background:#f87171;color:#020617}
 
+/* ACTION */
 .actionRow{display:flex;gap:8px;flex-wrap:wrap}
 
-/* Modal */
+/* MODAL (same style as withdrawals) */
 .modal{
-  position:fixed;inset:0;background:rgba(0,0,0,.65);
-  display:none;align-items:center;justify-content:center;z-index:9999;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.65);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
 }
 .modalBox{
-  width:95%;max-width:560px;background:#0b1224;border-radius:16px;
-  padding:16px;border:1px solid #1e293b;
+  width:95%;
+  max-width:560px;
+  background:#0b1224;
+  border-radius:16px;
+  padding:16px;
+  border:1px solid #1e293b;
 }
+.modalTitle{margin:0 0 12px 0;font-size:18px}
 .modalRow{margin-bottom:10px;font-size:14px}
 .modalRow span{opacity:.7}
-.modalTitle{margin:0 0 12px 0;font-size:18px}
-.closeBtn{margin-top:10px;width:100%;background:#1f2937;color:#fff}
-.pdfBtn{width:100%;margin-top:8px;background:#22c55e}
+.closeBtn{
+  margin-top:10px;
+  width:100%;
+  background:#1f2937;
+  color:#fff;
+}
+.pdfBtn{
+  width:100%;
+  margin-top:8px;
+  background:#22c55e;
+}
 </style>
 </head>
 
@@ -68,9 +182,9 @@ th{opacity:.85;text-align:left}
   <button class="miniBtn" onclick="logout()">Logout</button>
 </header>
 
-<!-- ✅ Deposit payment methods / address -->
+<!-- ✅ PAYMENT METHODS (Styled like withdraw section) -->
 <div class="box">
-  <h2 style="margin:0;font-size:18px;">Deposit Payment Methods</h2>
+  <h2>Deposit Payment Methods</h2>
   <div class="small">Select asset + network to see deposit wallet address</div>
 
   <select id="depAsset" onchange="renderDepositAddress()">
@@ -88,13 +202,16 @@ th{opacity:.85;text-align:left}
   <div class="card">
     <div class="small">Deposit Address</div>
     <div id="depAddress" style="margin-top:8px;font-weight:1000;">Loading…</div>
-    <button style="margin-top:10px;width:100%;background:#22c55e" onclick="copyAddress()">Copy Address</button>
+
+    <button class="greenBtn fullBtn" style="margin-top:10px" onclick="copyAddress()">
+      Copy Address
+    </button>
   </div>
 </div>
 
-<!-- ✅ Submit deposit proof -->
+<!-- ✅ SUBMIT PROOF -->
 <div class="box">
-  <h2 style="margin:0;font-size:18px;">Submit Deposit Proof</h2>
+  <h2>Submit Deposit Proof</h2>
   <div class="small">After depositing, submit confirmation</div>
 
   <select id="confAsset">
@@ -113,13 +230,14 @@ th{opacity:.85;text-align:left}
   <input id="confTx" placeholder="Transaction hash"/>
   <input id="confProof" type="file" accept="image/*,.pdf"/>
 
-  <button style="width:100%;background:#22c55e" onclick="submitDeposit()">Submit Deposit</button>
+  <button class="greenBtn fullBtn" onclick="submitDeposit()">Submit Deposit</button>
   <div id="depMsg" class="small"></div>
 </div>
 
-<!-- ✅ Deposit History below -->
+<!-- ✅ HISTORY -->
 <div class="box">
-  <h2 style="margin:0;font-size:18px;">Deposit History</h2>
+  <h2>Deposit History</h2>
+  <div class="small">Track all your deposit confirmations</div>
 
   <div class="tabs" id="tabs">
     <div class="tab active" data-status="all">All</div>
@@ -168,7 +286,6 @@ let limit=10;
 let offset=0;
 let cache=[];
 let searchTerm="";
-
 let currentDetails=null;
 
 loadPage();
@@ -194,18 +311,15 @@ async function loadDepositAddresses(){
     document.getElementById("depAddress").innerText = "Failed to load deposit addresses";
     return;
   }
-
   depositAddresses = data || [];
 }
 function renderDepositAddress(){
   const asset=document.getElementById("depAsset").value.toLowerCase();
   const network=document.getElementById("depNetwork").value.toUpperCase();
-
   const found = depositAddresses.find(d =>
     (d.asset||"").toLowerCase() === asset &&
     (d.network||"").toUpperCase() === network
   );
-
   document.getElementById("depAddress").innerText = found ? found.address : "No address configured";
 }
 function copyAddress(){
@@ -214,7 +328,7 @@ function copyAddress(){
   alert("Copied ✅");
 }
 
-/* ===== MODAL ===== */
+/* modal */
 function openModal(dep){
   currentDetails = dep;
 
@@ -233,7 +347,6 @@ function openModal(dep){
     ${dep.admin_note ? `<div class="modalRow"><span>Admin Note:</span> ${dep.admin_note}</div>` : ""}
     ${proofLink ? `<div class="modalRow"><span>Proof:</span> <a href="${proofLink}" target="_blank">Open proof</a></div>` : ""}
   `;
-
   document.getElementById("detailsModal").style.display="flex";
 }
 function closeModal(){
@@ -242,16 +355,14 @@ function closeModal(){
 window.openModal=openModal;
 window.closeModal=closeModal;
 
-/* PDF download */
+/* pdf */
 document.getElementById("downloadPdfBtn").addEventListener("click", ()=>{
   if(!currentDetails) return;
-
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
 
   doc.setFontSize(16);
   doc.text("Coinluxora Deposit Receipt", 14, 18);
-
   doc.setFontSize(11);
 
   const lines = [
@@ -272,7 +383,6 @@ document.getElementById("downloadPdfBtn").addEventListener("click", ()=>{
     y += 8;
   }
   doc.text("Thank you for using Coinluxora.", 14, y+10);
-
   doc.save(`coinluxora-deposit-${currentDetails.id}.pdf`);
 });
 
@@ -309,7 +419,7 @@ function renderHistory(){
           <th>Network</th>
           <th>Amount</th>
           <th>Status</th>
-          <th>Actions</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -323,7 +433,7 @@ function renderHistory(){
               <td>${badgeStatus(d.status)}</td>
               <td>
                 <div class="actionRow">
-                  <button class="miniBtn" onclick='openModal(${JSON.stringify(d)})'>View Details</button>
+                  <button class="miniBtn" onclick='openModal(${JSON.stringify(d)})'>View</button>
                 </div>
               </td>
             </tr>
@@ -374,7 +484,7 @@ function initRealtime(){
     .subscribe();
 }
 
-/* badge clear */
+/* clear badge */
 async function clearDepositBadge(){
   try{
     const { data: sessionData } = await supabaseClient.auth.getSession();
@@ -395,7 +505,7 @@ async function clearDepositBadge(){
   }
 }
 
-/* submit deposit */
+/* submit */
 async function submitDeposit(){
   try{
     showDepMsg("Submitting...", true);
@@ -438,7 +548,6 @@ async function submitDeposit(){
     });
 
     const json = await res.json().catch(()=>null);
-
     if(!res.ok){
       showDepMsg("Error: " + (json?.error || JSON.stringify(json) || "Unknown"), false);
       return;
@@ -457,12 +566,7 @@ async function submitDeposit(){
   }
 }
 
-async function logout(){
-  await supabaseClient.auth.signOut();
-  window.location.href="login.html";
-}
-
-/* UI events */
+/* ui events */
 document.getElementById("tabs").onclick=(e)=>{
   const tab=e.target.closest(".tab");
   if(!tab) return;
@@ -482,6 +586,11 @@ document.getElementById("clearSearch").onclick=()=>{
 };
 document.getElementById("refreshBtn").onclick=()=>loadHistory(true);
 document.getElementById("loadMore").onclick=()=>loadHistory(false);
+
+async function logout(){
+  await supabaseClient.auth.signOut();
+  window.location.href="login.html";
+}
 
 /* init */
 async function loadPage(){
